# pulse

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  gent.json  pyproject.toml
.gent/: setup.sh
deploy/: cloudbuild.yaml  deploy.sh  setup-gcp.sh
docs/: architecture-roadmap.md  bayesian-and-real-data.md  dead-pathways.md  iter13-handoff.md  iter14-handoff.md  iter15-handoff.md  iter16-handoff.md  iter17-handoff.md  iter18-handoff.md  iter19-handoff.md  iter20-handoff.md  iter21-handoff.md  iter22-handoff.md  iter23-handoff.md  iter24-handoff.md  iter25-handoff.md  iter26-handoff.md  iter27-handoff.md  iter28-handoff.md  iter29-handoff.md  iter30-handoff.md  iter31-handoff.md  iter32-handoff.md  iter32-review.md  iter36-calibration-investigation.md  iter39-unobserved-markers-investigation.md  iter42-physiology-rules.md  iter77-handoff.md  modeling-state.md  multi-timescale-plan.md  physiology-coverage.md  prd.md  roadmap.md  training-runs.md
engine/: .gitignore  pyproject.toml
engine/pulse/: benchmark.py  (+7 more)
pulse/: benchmark.py  benchmark.thresholds.json  cohort_loss.py  coupling_prior_loss.py  dose_response.py  physiology_rules_loss.py  train.py  training_verifier_loss.py  types.py
scripts/: check_hr_drift.py  ingest_real_data.py  migrate_benchmark_initial_state.py  probe_unobserved_markers.py
tests/: test_cohort_ablation.py  test_cold_calibration.py  test_dose_response.py  test_gut_module.py  test_insulin_sweep_signal.py  test_landmarks.py  test_physiology_rules_signal.py  test_safe_corr_grad.py  test_safe_step.py  test_textbook_scenarios_run.py  test_train_window_sampling.py  test_training_signals.py
train/: compare-runs.sh  get-results.sh  spec.json  spec.template.json
(+101 files in other folders)
